# StarClassifier

./: CNAME  CONTRIBUTING.md  docker-compose.yml  docker.conf  index.html  readme.md
backend/: .env.example  .gitignore  Dockerfile  index.js  package-lock.json  package.json  pnpm-lock.yaml
backend/config/: db.js
backend/contollers/: user.controller.js
backend/middlewares/: auth.js
backend/models/: user.model.js
backend/routes/: user.routes.js
backend/utils/: features.js
flows/: backend.excalidraw  fast_api.excalidraw  frontend.excalidraw
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/common/: Header.jsx
frontend/src/components/dashboard/: ImageInput.jsx  Slider.jsx
frontend/src/components/dashboard/mobile_slider/: SmallSlider.jsx
frontend/src/constants/: still.js
frontend/src/context/: AccountContext.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  SignUp.jsx
ml-backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
ml-backend/model/: data_cleaning.ipynb  sports_celebrity_classification.ipynb
